--- a/bitcoin.html
+++ b/bitcoin.html
@@ -161,10 +161,10 @@ a {
   <input class="menu-btn" type="checkbox" id="menu-btn" />
   <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
   <ul class="menu">
-    <li><a href="link">Basics</a></li>
-    <li><a href="link">Market</a></li>
-    <li><a href="link">Wallets</a></li>
-    <li><a href="link">Exchanges</a></li>
+    <li><a href="https://testyduckling39.github.io/Finale/basics.html">Basics</a></li>
+    <li><a href="maerket">Market</a></li>
+    <li><a href="wallets.html">Wallets</a></li>
+    <li><a href="exchanges.html">Exchanges</a></li>
   </ul>
 </header>
-       </html>
+	 </html>
