--- a/basics.html
+++ b/basics.html
@@ -167,10 +167,10 @@ margin:0;
   <input class="menu-btn" type="checkbox" id="menu-btn" />
   <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
   <ul class="menu">
-    <li><a href="link">Basics</a></li>
-    <li><a href="link">Market</a></li>
-    <li><a href="link">Wallets</a></li>
-    <li><a href="link">Exchanges</a></li>
+<li><a href="https://testyduckling39.github.io/Finale/basics.html">Basics</a></li>
+    <li><a href="https://testyduckling39.github.io/Finale/market.html">Market</a></li>
+    <li><a href="https://testyduckling39.github.io/Finale/wallets.html">Wallets</a></li>
+    <li><a href="https://testyduckling39.github.io/Finale/exchanges.html">Exchanges</a></li>
   </ul>
 <br>
 <br><br>
