--- a/bitcoin.html
+++ b/bitcoin.html
@@ -162,9 +162,9 @@ a {
   <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
   <ul class="menu">
     <li><a href="https://testyduckling39.github.io/Finale/basics.html">Basics</a></li>
-    <li><a href="maerket">Market</a></li>
-    <li><a href="wallets.html">Wallets</a></li>
-    <li><a href="exchanges.html">Exchanges</a></li>
+    <li><a href="https://testyduckling39.github.io/Finale/market.html">Market</a></li>
+    <li><a href="https://testyduckling39.github.io/Finale/wallets.html">Wallets</a></li>
+    <li><a href="https://testyduckling39.github.io/Finale/exchanges.html">Exchanges</a></li>
   </ul>
 </header>
 	 </html>
