--- a/exchanges.html
+++ b/exchanges.html
@@ -175,7 +175,7 @@ margin:0;
 <br><br>
 <br>
 <p id="big">What is a Bitcoin Exchange: </p>
-<p>(put info here!!)</p>
+<p>A Bitcoin exchange is a digital marketplace where traders can buy and sell bitcoins using different fiat currencies or altcoins. It works similarly to a traditional stock exchange, but instead of trading stocks, users trade digital currencies. These exchanges operate 24/7, and transactions are conducted via an order book where buy and sell orders are matched. Exchanges also provide the necessary security measures to protect users' digital assets and personal information. Examples of Bitcoin exchanges include Coinbase, Binance, and Kraken.</p>
 <br>
 
   
