--- a/basics.html
+++ b/basics.html
@@ -176,5 +176,5 @@ margin:0;
 <br><br>
 <br>
 <p id="big">How Bitcoin Works: </p>
-<p>(put info here!!)</p>
+<p>Bitcoin is a peer-to-peer digital currency that operates on a technology called blockchain. Users send transactions, encrypted with cryptographic signatures, across this network. These transactions are grouped into blocks, which are confirmed by miners through a process called proof-of-work. The first miner to confirm the block is rewarded with bitcoins. Once confirmed, the transaction is added to the blockchain, and the bitcoins are transferred. Bitcoins are stored in digital wallets and all transactions are public on the blockchain, but user identities remain encrypted.</p>
 <br>
