--- a/market.html
+++ b/market.html
@@ -175,6 +175,6 @@ margin:0;
 <br><br>
 <br>
 <p id="big">How the Bitcoin Market Works: </p>
-<p>(put info here!!)</p>
+<p>The Bitcoin market operates much like a traditional financial market. Investors can buy, sell, or trade Bitcoin based on their prediction of its value. The value of Bitcoin is primarily determined by supply and demand dynamics, with price volatility often driven by market news, investor sentiment, and macroeconomic factors. Transactions are typically facilitated through online Bitcoin exchanges, with prices varying across different platforms due to differences in liquidity levels and trading volumes. The market operates 24/7, making it distinct from traditional markets with set trading hours.</p>
 <br>    
     </html>
