--- a/wallets.html
+++ b/wallets.html
@@ -176,7 +176,7 @@ margin:0;
 <br><br>
 <br>
 <p id="big">What is a Bitcoin Wallet: </p>
-<p>(put info here!!)</p>
+<p>A Bitcoin wallet is a digital tool that allows users to send, receive, and store their Bitcoins securely. The wallet contains a pair of cryptographic keys: a public key, which is like an email address and is shared with others to receive Bitcoin; and a private key, akin to a password, used to sign transactions and access the wallet's funds. The transactions are recorded on the Bitcoin blockchain, ensuring transparency and security. It's crucial to keep the private key confidential to prevent unauthorized access to the wallet's contents.</p>
 <br>
 
   
